# FF13CrystalRE

./: Cargo.toml  LICENSE  README.md  tailwind.config.js
src/: crystal.rs  main.rs
src/crystal/: mod.rs
src/crystal_page/: mod.rs
src/view/: mod.rs
templates/: index.html  node.html  node_edit.html  old_node_edit.html
templates/assets/: styles.css  tailwind.css
